moved mountain img down

--- a/css/master.css
+++ b/css/master.css
@@ -90,6 +90,10 @@ hr {
   top: 50px;
 }
 
+.mountain-img {
+  padding-top: 180px;
+}
+
 /* MIDDLE CONTAINER */
 .profile-pic {
   border-radius: 50%;
